# Compact-Polylla-Mesh

./: .gitignore  CMakeLists.txt  README.md  delaunayinfo.R  main.cpp  planar10.ipe  planar_embedding10.pg  pruebas.ods
build_planar/: .RData  constructEmbedding.sh  create_triangulations.sh  delaunayinfo.r  genDelaunay.sh  planar_embedding100.pg  points10.edge  points10.node  random_points.r
data/: Polylla  README.md  datagenerator.sh  generateplannar  generateplannar.cpp  output.1.hedge  output.1.off  output.2.node  output_polylla.1.hedge  planar_embedding10.pg  plot_triangulation.py  points10.1.hedge  points10.1.node  points10.1.off  points10.1.pg  points10.2.node  points100.1.hedge  points100.1.node  points100.1.off  points100.2.node  points1000.1.hedge  points1000.1.node  points1000.1.off  points1000.1.pg  points1000.2.node  points10000.1.hedge  points10000.1.node  points10000.1.off  points10000.1.pg  points10000.2.node  points10000_polylla.1.hedge  points1000_polylla.1.hedge  points100_polylla.1.hedge  points10_polylla.1.hedge  points11.1.hedge  points11.1.node  points11.1.off  points11.1.pg  points11.2.node  points11_polylla.1.hedge  (+211 more)
generate_data/: planarity2localFormat.py  (+2 more)
src/: CMakeLists.txt  CompactHalfEdge.hpp  CompactPolylla.hpp  CompactPolylla_no_matrix.hpp  HalfEdge_AoS.hpp  Polylla_Aos.hpp  class GenerateMesh : public MeshGenerato  compressHalfEdge.hpp  compressHalfEdgeJose.hpp  compresshalfedge.hpp  delfin.cpp  delfin.hpp  inversedHalfEdge.hpp  io_void.cpp  io_void.hpp  poly_old.cpp  polylla.hpp  triangulation.hpp
src/cambios/: inversedHalfEdge.hpp
(+269 files in other folders)
